EVA-4113 Update pipeline to Java-21 (#227)