@@ -18,54 +18,70 @@ package uk.ac.ebi.eva.pipeline.configuration.jobs;
 
 import com.mongodb.client.MongoCursor;
 import org.bson.Document;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.springframework.batch.core.JobExecution;
 import org.springframework.batch.core.JobParameters;
 import org.springframework.batch.test.JobLauncherTestUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.test.context.ActiveProfiles;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.mapping.MongoMappingContext;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit4.SpringRunner;
-import uk.ac.ebi.eva.pipeline.Application;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.ac.ebi.eva.test.configuration.BatchTestConfiguration;
-import uk.ac.ebi.eva.test.configuration.TemporaryRuleConfiguration;
-import uk.ac.ebi.eva.test.rules.TemporaryMongoRule;
 import uk.ac.ebi.eva.test.utils.JobTestUtils;
+import uk.ac.ebi.eva.test.utils.MongoTestContainerHelper;
 import uk.ac.ebi.eva.utils.EvaJobParameterBuilder;
 import uk.ac.ebi.eva.utils.FileUtils;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static uk.ac.ebi.eva.test.configuration.BatchTestConfiguration.JOB_ACCESSION_IMPORT_JOB;
 
-@RunWith(SpringRunner.class)
-@ActiveProfiles({Application.VARIANT_WRITER_MONGO_PROFILE})
-@TestPropertySource({"classpath:test-mongo.properties"})
-@ContextConfiguration(classes = {AccessionImportJobConfiguration.class, BatchTestConfiguration.class, TemporaryRuleConfiguration.class})
-public class AccessionImportJobTest {
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration(classes = {AccessionImportJobConfiguration.class, BatchTestConfiguration.class})
+public class AccessionImportJobTest extends MongoTestContainerHelper {
+    private static final String DB_NAME = "accession-import-test-db";
+
     @Autowired
-    @Rule
-    public TemporaryMongoRule mongoRule;
-    @Autowired
+    @Qualifier(JOB_ACCESSION_IMPORT_JOB)
     private JobLauncherTestUtils jobLauncherTestUtils;
+
+    @Autowired
+    private MongoMappingContext mongoMappingContext;
+
+    @Autowired
+    private BatchTestConfiguration batchTestConfiguration;
+
+    private MongoTemplate mongoTemplate;
+
+    @BeforeEach
+    public void setUp() throws Exception {
+        mongoTemplate = batchTestConfiguration.getMongoTemplate(DB_NAME, mongoMappingContext);
+        mongoTemplate.getDb().drop();
+    }
+
+    @AfterEach
+    void cleanDb() {
+        mongoTemplate.getDb().drop();
+    }
 
     @Test
     public void importSSIdTest() throws Exception {
-        String databaseName = mongoRule.getRandomTemporaryDatabaseName();
         String variantsCollectionName = "variants";
-        mongoRule.insertDocuments(databaseName, variantsCollectionName, getData());
+        mongoTemplate.getDb().getCollection(variantsCollectionName).insertMany(getData());
 
         File accessionReport = FileUtils.getResource("/input-files/accession-report/accession-report.accessioned.vcf");
         // Run the Job
         JobParameters jobParameters = new EvaJobParameterBuilder()
-                .databaseName(databaseName)
+                .databaseName(DB_NAME)
                 .collectionVariantsName(variantsCollectionName)
                 .inputAccessionReport(accessionReport.getAbsolutePath())
                 .toJobParameters();
@@ -73,14 +89,14 @@ public class AccessionImportJobTest {
         JobExecution jobExecution = jobLauncherTestUtils.launchJob(jobParameters);
 
         JobTestUtils.assertCompleted(jobExecution);
-        checkStoreSSIdStep(mongoRule, databaseName, variantsCollectionName);
+        checkStoreSSIdStep(variantsCollectionName);
     }
 
-    public void checkStoreSSIdStep(TemporaryMongoRule mongoRule, String databaseName, String collection) {
-        assertEquals(getData().size(), mongoRule.getCollection(databaseName, collection).countDocuments());
-        MongoCursor<Document> iterator = mongoRule.getCollection(databaseName, collection).find().iterator();
+    public void checkStoreSSIdStep(String collection) {
+        assertEquals(getData().size(), mongoTemplate.getDb().getCollection(collection).countDocuments());
+        MongoCursor<Document> iterator = mongoTemplate.getDb().getCollection(collection).find().iterator();
         List<Document> allDocInDB = new ArrayList<>();
-        while(iterator.hasNext()){
+        while (iterator.hasNext()) {
             allDocInDB.add(iterator.next());
         }
 
@@ -88,42 +104,147 @@ public class AccessionImportJobTest {
 
         // id added to existing id
         Document docWithIdApppend = allDocInDB.stream()
-                .filter(d->d.get("_id", String.class).equals("chr1_3000185_G_T")).findAny().get();
+                .filter(d -> d.get("_id", String.class).equals("chr1_3000185_G_T")).findAny().get();
         assertEquals("ss7357768460", docWithIdApppend.get("ids", ArrayList.class).get(0));
         assertEquals("ss7357768480", docWithIdApppend.get("ids", ArrayList.class).get(1));
 
         // no insert for document not found
-        assertTrue(allDocInDB.stream().noneMatch(d->d.get("_id",String.class).equals("chr1_3001236__TTTTTT")));
+        assertTrue(allDocInDB.stream().noneMatch(d -> d.get("_id", String.class).equals("chr1_3001236__TTTTTT")));
 
         // all documents have atleast one id
-        assertTrue(allDocInDB.stream().allMatch(d->!d.get("ids",ArrayList.class).isEmpty()));
+        assertTrue(allDocInDB.stream().allMatch(d -> !d.get("ids", ArrayList.class).isEmpty()));
 
     }
 
-    public List<String> getData() {
-        String[] data = new String[]{
-                "{ \"_id\" : \"chr1_3000185_G_T\", \"chr\" : \"chr1\", \"start\" : 3000185, \"alt\" : \"T\", \"ref\" : \"G\", \"ids\": [\"ss7357768460\"] }",
-                "{ \"_id\" : \"chr1_3000287_A_G\", \"chr\" : \"chr1\", \"start\" : 3000287, \"alt\" : \"G\", \"ref\" : \"A\", \"ids\": [] }",
-                "{ \"_id\" : \"chr1_3000325_G_T\", \"chr\" : \"chr1\", \"start\" : 3000325, \"alt\" : \"T\", \"ref\" : \"G\" }",
-                "{ \"_id\" : \"chr1_3000441_T_G\", \"chr\" : \"chr1\", \"start\" : 3000441, \"alt\" : \"G\", \"ref\" : \"T\" }",
-                "{ \"_id\" : \"chr1_3001188_G_A\", \"chr\" : \"chr1\", \"start\" : 3001188, \"alt\" : \"A\", \"ref\" : \"G\" }",
-                "{ \"_id\" : \"chr1_3001256_G_T\", \"chr\" : \"chr1\", \"start\" : 3001256, \"alt\" : \"T\", \"ref\" : \"G\" }",
-                "{ \"_id\" : \"chr1_3001490_C_A\", \"chr\" : \"chr1\", \"start\" : 3001490, \"alt\" : \"A\", \"ref\" : \"C\" }",
-                "{ \"_id\" : \"chr1_3001579_A_T\", \"chr\" : \"chr1\", \"start\" : 3001579, \"alt\" : \"T\", \"ref\" : \"A\" }",
-                "{ \"_id\" : \"chr1_3001645_A_C\", \"chr\" : \"chr1\", \"start\" : 3001645, \"alt\" : \"C\", \"ref\" : \"A\" }",
-                "{ \"_id\" : \"chr1_3001646_A_G\", \"chr\" : \"chr1\", \"start\" : 3001646, \"alt\" : \"G\", \"ref\" : \"A\" }",
-                "{ \"_id\" : \"chr1_3001648_G_C\", \"chr\" : \"chr1\", \"start\" : 3001648, \"alt\" : \"C\", \"ref\" : \"G\" }",
-                "{ \"_id\" : \"chr1_3001712_C_G\", \"chr\" : \"chr1\", \"start\" : 3001712, \"alt\" : \"G\", \"ref\" : \"C\" }",
-                "{\"_id\" : \"chr1_3001190_GGTCATCTTGG_\", \"chr\" : \"chr1\", \"start\" : 3001190, \"alt\" : \"\", \"ref\" : \"GGTCATCTTGG\" }",
-                "{ \"_id\" : \"chr1_3001211_CTT_\", \"chr\" : \"chr1\", \"start\" : 3001211, \"alt\" : \"\", \"ref\" : \"CTT\" }",
-                "{ \"_id\" : \"chr1_3001215__AAA\", \"chr\" : \"chr1\", \"start\" : 3001215, \"alt\" : \"AAA\", \"ref\" : \"\" }",
-                "{ \"_id\" : \"chr1_3001237__T\", \"chr\" : \"chr1\", \"start\" : 3001237, \"alt\" : \"T\", \"ref\" : \"\" }",
-                "{ \"_id\" : \"chr1_3001237__TT\", \"chr\" : \"chr1\", \"start\" : 3001237, \"alt\" : \"TT\", \"ref\" : \"\" }",
-                "{ \"_id\" : \"chr1_3001237__TTT\", \"chr\" : \"chr1\", \"start\" : 3001237, \"alt\" : \"TTT\", \"ref\" : \"\" }",
-                "{ \"_id\" : \"chr1_3001237__TTTT\", \"chr\" : \"chr1\", \"start\" : 3001237, \"alt\" : \"TTTT\", \"ref\" : \"\" }",
-                "{ \"_id\" : \"chr1_3001237__TTTTT\", \"chr\" : \"chr1\", \"start\" : 3001237, \"alt\" : \"TTTTT\", \"ref\" : \"\" }",
-                "{ \"_id\" : \"1_100_CAG_\", \"chr\" : \"1\", \"start\" : 100, \"alt\" : \"\", \"ref\" : \"CAG\" }"
-    };
-        return Arrays.asList(data);
+    public List<Document> getData() {
+        return List.of(
+                new Document("_id", "chr1_3000185_G_T")
+                        .append("chr", "chr1")
+                        .append("start", 3000185)
+                        .append("alt", "T")
+                        .append("ref", "G")
+                        .append("ids", List.of("ss7357768460")),
+
+                new Document("_id", "chr1_3000287_A_G")
+                        .append("chr", "chr1")
+                        .append("start", 3000287)
+                        .append("alt", "G")
+                        .append("ref", "A")
+                        .append("ids", List.of()),
+
+                new Document("_id", "chr1_3000325_G_T")
+                        .append("chr", "chr1")
+                        .append("start", 3000325)
+                        .append("alt", "T")
+                        .append("ref", "G"),
+
+                new Document("_id", "chr1_3000441_T_G")
+                        .append("chr", "chr1")
+                        .append("start", 3000441)
+                        .append("alt", "G")
+                        .append("ref", "T"),
+
+                new Document("_id", "chr1_3001188_G_A")
+                        .append("chr", "chr1")
+                        .append("start", 3001188)
+                        .append("alt", "A")
+                        .append("ref", "G"),
+
+                new Document("_id", "chr1_3001256_G_T")
+                        .append("chr", "chr1")
+                        .append("start", 3001256)
+                        .append("alt", "T")
+                        .append("ref", "G"),
+
+                new Document("_id", "chr1_3001490_C_A")
+                        .append("chr", "chr1")
+                        .append("start", 3001490)
+                        .append("alt", "A")
+                        .append("ref", "C"),
+
+                new Document("_id", "chr1_3001579_A_T")
+                        .append("chr", "chr1")
+                        .append("start", 3001579)
+                        .append("alt", "T")
+                        .append("ref", "A"),
+
+                new Document("_id", "chr1_3001645_A_C")
+                        .append("chr", "chr1")
+                        .append("start", 3001645)
+                        .append("alt", "C")
+                        .append("ref", "A"),
+
+                new Document("_id", "chr1_3001646_A_G")
+                        .append("chr", "chr1")
+                        .append("start", 3001646)
+                        .append("alt", "G")
+                        .append("ref", "A"),
+
+                new Document("_id", "chr1_3001648_G_C")
+                        .append("chr", "chr1")
+                        .append("start", 3001648)
+                        .append("alt", "C")
+                        .append("ref", "G"),
+
+                new Document("_id", "chr1_3001712_C_G")
+                        .append("chr", "chr1")
+                        .append("start", 3001712)
+                        .append("alt", "G")
+                        .append("ref", "C"),
+
+                new Document("_id", "chr1_3001190_GGTCATCTTGG_")
+                        .append("chr", "chr1")
+                        .append("start", 3001190)
+                        .append("alt", "")
+                        .append("ref", "GGTCATCTTGG"),
+
+                new Document("_id", "chr1_3001211_CTT_")
+                        .append("chr", "chr1")
+                        .append("start", 3001211)
+                        .append("alt", "")
+                        .append("ref", "CTT"),
+
+                new Document("_id", "chr1_3001215__AAA")
+                        .append("chr", "chr1")
+                        .append("start", 3001215)
+                        .append("alt", "AAA")
+                        .append("ref", ""),
+
+                new Document("_id", "chr1_3001237__T")
+                        .append("chr", "chr1")
+                        .append("start", 3001237)
+                        .append("alt", "T")
+                        .append("ref", ""),
+
+                new Document("_id", "chr1_3001237__TT")
+                        .append("chr", "chr1")
+                        .append("start", 3001237)
+                        .append("alt", "TT")
+                        .append("ref", ""),
+
+                new Document("_id", "chr1_3001237__TTT")
+                        .append("chr", "chr1")
+                        .append("start", 3001237)
+                        .append("alt", "TTT")
+                        .append("ref", ""),
+
+                new Document("_id", "chr1_3001237__TTTT")
+                        .append("chr", "chr1")
+                        .append("start", 3001237)
+                        .append("alt", "TTTT")
+                        .append("ref", ""),
+
+                new Document("_id", "chr1_3001237__TTTTT")
+                        .append("chr", "chr1")
+                        .append("start", 3001237)
+                        .append("alt", "TTTTT")
+                        .append("ref", ""),
+
+                new Document("_id", "1_100_CAG_")
+                        .append("chr", "1")
+                        .append("start", 100)
+                        .append("alt", "")
+                        .append("ref", "CAG")
+        );
     }
 }
